# gpu-runtime

./: .gitmodules  CMakeLists.txt  README.md  gpu-runtime.cc
examples/: quickstart42.cu.cc  saxpy.cu.cc
tests/: common.h  cublas_static_test.cc  deprecated_execution_control_test.cu.cc  device_code.cu  device_code.h  device_management_test.cc  device_memory_management_test.cc  event_management_test.cc  execution_control_test.cu.cc  global_symbol_management_test.cu.cc  peer_device_memory_access_test.cc  stream_management_test.cc
tests/gpu/: dynamic_shared_memory_test.cu.cc
